# JJPlayer

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jingju/jjplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVSyncronizer.cpp  AudioDecoder.cpp  AudioFrame.cpp  AudioFrameQueue.cpp  AudioOutput.cpp  Decoder.cpp  PacketQueue.cpp  VideoDecoder.cpp  VideoFrame.cpp  VideoFrameQueue.cpp  VideoOutput.cpp  native-lib.cpp
app/src/main/cpp/audiorender/: AudioResampler.cpp  BaseAudioController.cpp  OpenSLESAudioController.cpp
app/src/main/cpp/egl/: EglSurfaceRender.cpp  EglSurfaceRenderController.cpp  egl_core.cpp  es_manager.cpp
app/src/main/cpp/include/: AVFrameQueue.h  AVSyncronizer.h  AudioDecoder.h  AudioFrame.h  AudioFrameQueue.h  AudioOutput.h  Decoder.h  FrameQueue.h  FrameQueue2.h  PacketQueue.h  VideoDecoder.h  VideoFrame.h  VideoFrameQueue.h  VideoOutput.h
app/src/main/cpp/include/audiorender/: AudioResampler.h  BaseAudioController.h  OpenSLESAudioController.h
app/src/main/cpp/include/common/: CommonThread.h  CommonTools.h
app/src/main/cpp/include/egl/: EglSurfaceRender.h  EglSurfaceRenderController.h  egl_core.h  es_manager.h
app/src/main/cpp/include/player/: JJMediaPlayer.h  JJPlayer.h  MessageQueue.h  PlayState.h  PlayerState.h
app/src/main/cpp/include/remux/: Remuxer.h
app/src/main/cpp/include/sdl/: SDL_Class.h  SDL_Thread.h  SDL_VoutOverlay.h  SDL_VoutOverlay_Opaque.h  SDL_cond.h  SDL_mutex.h
app/src/main/cpp/include/soundtouch/: SoundTouchWrapper.h
app/src/main/cpp/include/videorender/: VideoRenderController.h
app/src/main/cpp/player/: JJMediaPlayer.cpp  JJPlayer.cpp  PlayState.cpp  PlayerState.cpp
app/src/main/cpp/remux/: Remuxer.cpp
app/src/main/cpp/sdl/: SDL_Thread.cpp  SDL_VoutOverlay.cpp  SDL_VoutOverlay_Opaque.cpp  SDL_cond.cpp  SDL_mutex.cpp
app/src/main/cpp/thirdlib/ffmpeg/include/libavformat/: avio.h
app/src/main/cpp/videorender/: VideoRenderController.cpp
app/src/main/java/com/jingju/jjplayer/: IMediaPlayer.java  JJMediaPlayer.java  MainActivity.java  Remuxer.java  VideoActivity.java
app/src/main/java/com/jingju/jjplayer/annotation/: AccesseByNative.java
app/src/main/java/com/jingju/jjplayer/permission/: ActivityPermissionDispatcher.java  FragmentPermissionDispatcher.java  PermissionCallback.java  PermissionState.java  PermissionUtil.java
app/src/main/java/com/jingju/jjplayer/utils/: BaseContext.java  BrandUtils.java  CommonUtils.java  Constant.java  ContextUtil.java  DisplayUtil.java  EncryptUtil.java  FileProviderUtil.java  FileUtil.java  ImageUtil.java  LogUtils.java  OSUtils.java  ThreadUtils.java  ToastUtils.java
app/src/main/java/com/jingju/jjplayer/view/: FFVideoView.java  IMediaController.java  IRenderView.java  IjkMediaMeta.java  JJVideoView.java  MeasureHelper.java  MediaInfo.java  SurfaceRenderView.java
app/src/main/res/layout/: activity_main.xml  activity_video.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jingju/jjplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
